k8s_jy/4_0926/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: my-service
subsets:
  - addresses:
    - ip: 10.44.0.2
    - ip: 10.44.0.3
    ports:
     - targetPort: 8080
