k8s_jy/4_0926/svc-node.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-appjs-service
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123
  selector:
    app: appjs
