k8s_jy/4_0926/ingress-marvel.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-marvel
spec:
  defaultBackend:
    service:
      name: marvel-service
      port:
        number: 80
